[package]
name = "rlbot_server_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocketsim_rs = "0.26.0"
rocketsim_rs = { path = "../../rocketsim-rs" }
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread", "sync", "net", "io-util", "time", "fs"] }
rlbot_sockets = { path = "../core" }
thiserror = "1.0.57"
toml = "0.8.10"
shlex = "1.3.0"
ahash = "0.8.10"
async-timer = { version = "1.0.0-beta.13", features = ["tokio1"] }

[lints.clippy]
all = "warn"
