[package]
name = "rlbot_server_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocketsim_rs = "0.33.0"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread", "sync", "net", "io-util", "time", "fs"] }
rlbot_sockets = { path = "../core" }
thiserror = "2.0.3"
toml = "0.8.10"
ahash = "0.8.10"
async-timer = { version = "1.0.0-beta.15", features = ["tokio1"] }

[lints.clippy]
all = "warn"
